# load-assurance

./: NOTES.md  README.md  pyproject.toml
examples/: local_to_local.yaml  s3_to_s3.yaml
load_assurance/: __main__.py  cli.py  config.py  engine.py
load_assurance/adapters/: base.py  fs.py  local.py  s3.py
load_assurance/checks/: null_rate.py  result.py  row_count.py  schema.py
load_assurance/readers/: base.py
test_data/: generate_parquet.py
test_data/source/: data.parquet
